--- a/index.html
+++ b/index.html
@@ -5,22 +5,88 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>iHiker 智能徒步助手</title>
   <link rel="stylesheet" href="style.css" />
-  <!-- 百度地图 API v2.0 -->
   <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=kZyLx9pE2buNHOuq3bFNHDfXuFkxyaPJ"></script>
 </head>
 <body>
-  <header>
-    <h1>iHiker 智能徒步助手</h1>
-  </header>
-  <main>
-    <div id="map"></div>
-    <div id="stats">
-      <p>总距离：<span id="distance">0</span> 米</p>
-      <p>用时：<span id="time">0</span> 秒</p>
-      <p>平均速度：<span id="speed">0</span> 米/秒</p>
-      <button id="reset">清除轨迹</button>
+  <div id="app">
+    <header>
+      <div class="header-content">
+        <h1>iHiker</h1>
+        <div class="header-actions">
+          <button id="auth-btn" class="btn-secondary">登录</button>
+          <button id="history-btn" class="btn-secondary">历史</button>
+        </div>
+      </div>
+    </header>
+
+    <div id="auth-modal" class="modal" style="display: none;">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2 id="auth-title">登录账号</h2>
+        <form id="auth-form">
+          <input type="email" id="email" placeholder="邮箱" required />
+          <input type="password" id="password" placeholder="密码" required />
+          <button type="submit" class="btn-primary">登录</button>
+        </form>
+        <p class="auth-switch">
+          还没有账号？<a href="#" id="switch-auth">注册</a>
+        </p>
+      </div>
     </div>
-  </main>
-  <script src="script.js"></script>
+
+    <div id="history-modal" class="modal" style="display: none;">
+      <div class="modal-content wide">
+        <span class="close">&times;</span>
+        <h2>我的徒步记录</h2>
+        <div id="track-list" class="track-list"></div>
+      </div>
+    </div>
+
+    <main>
+      <div id="map"></div>
+
+      <div class="controls-panel">
+        <div class="control-buttons">
+          <button id="start-btn" class="btn-control btn-start">开始</button>
+          <button id="pause-btn" class="btn-control btn-pause" disabled>暂停</button>
+          <button id="stop-btn" class="btn-control btn-stop" disabled>结束</button>
+        </div>
+      </div>
+
+      <div class="export-panel" id="export-panel" style="display: none;">
+        <button id="export-gpx-btn" class="btn-export">导出 GPX</button>
+        <button id="share-btn" class="btn-export">分享</button>
+      </div>
+
+      <div id="stats" class="stats-panel">
+        <div class="stat-item">
+          <div class="stat-label">距离</div>
+          <div class="stat-value">
+            <span id="distance">0.00</span>
+            <span class="stat-unit">公里</span>
+          </div>
+        </div>
+        <div class="stat-item">
+          <div class="stat-label">用时</div>
+          <div class="stat-value" id="time">00:00:00</div>
+        </div>
+        <div class="stat-item">
+          <div class="stat-label">配速</div>
+          <div class="stat-value">
+            <span id="pace">-</span>
+            <span class="stat-unit">分/公里</span>
+          </div>
+        </div>
+        <div class="stat-item">
+          <div class="stat-label">速度</div>
+          <div class="stat-value">
+            <span id="speed">0.0</span>
+            <span class="stat-unit">公里/时</span>
+          </div>
+        </div>
+      </div>
+    </main>
+  </div>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
