--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="iHiker - 智能徒步助手，记录你的每一步" />
-  <title>iHiker 智能徒步助手 v2.0</title>
+  <title>irunner 智能跑步助手 v2.0</title>
   <link rel="stylesheet" href="style.css" />
   <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=kZyLx9pE2buNHOuq3bFNHDfXuFkxyaPJ"></script>
 </head>
@@ -13,7 +13,7 @@
     <header>
       <div class="header-content">
         <div class="header-left">
-          <h1>iHiker</h1>
+          <h1>iRunner</h1>
           <span class="version-badge">v2.0</span>
         </div>
         <div class="header-actions">
@@ -25,7 +25,7 @@
             <span id="voice-icon">🔊</span>
           </button>
           <button id="stats-btn" class="btn-secondary">统计</button>
-          <button id="goals-btn" class="btn-secondary">目标</button>
+          <!-- <button id="goals-btn" class="btn-secondary">目标</button> -->
           <button id="achievements-btn" class="btn-secondary">成就</button>
           <button id="history-btn" class="btn-secondary" style="display: none;">历史</button>
           <button id="auth-btn" class="btn-secondary">登录</button>
@@ -74,7 +74,7 @@
             </div>
             <div class="stat-card">
               <div class="stat-card-icon">🔥</div>
-              <div class="stat-card-label">徒步次数</div>
+              <div class="stat-card-label">跑步次数</div>
               <div class="stat-card-value" id="total-count">0 次</div>
             </div>
             <div class="stat-card">
